tests/paczka1/small_fuzzy/72393963.err
Error in line 2: SBjH A8 49,8
Error in line 13: A721 A665 -2,9
